
[project]
name = "pytune_dsp"
version = "0.0.0"
description = "PyTune digital signal processing utilities"
requires-python = ">=3.12,<3.13"

[tool.poetry]
name = "pytune_dsp"
version = "0.1.0"
description = "Digital Signal Processing utilities for PyTune (notes, FFT, YIN, inharmonicity, etc.)"
authors = ["Gabriel de Fombelle <gabriel.de.fombelle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gdefombelle/pytune_dsp"
packages = [{ include = "pytune_dsp" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26"
scipy = "^1.14"
librosa = "^0.10.2"
essentia = "2.1b6.dev1389"
soundfile = "^0.13.1"
matplotlib = "^3.10.7"
numba = "^0.62.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"