[project]
name = "pytune_dsp"
version = "0.1.0"
description = "Digital Signal Processing utilities for PyTune (FFT, YIN, HPS, inharmonicity, etc.)"
requires-python = ">=3.12,<3.13"
readme = "README.md"

authors = [
    { name = "Gabriel de Fombelle", email = "gabriel.de.fombelle@gmail.com" }
]

license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "scipy>=1.14",
    "librosa>=0.10.2",
    "essentia==2.1b6.dev1389",
    "soundfile>=0.13.1",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytune_dsp"]